# TinyMake

./: .gitignore  CMakeLists.txt  README.md
include/: auto-var-replacement.h  exception.h  lexer.h  parser.h  var-replacement.h  var-resolution.h
src/: lexer.cpp  main.cpp  parser.cpp
tests/: lexer-test.cpp
